@@ -1,3 +1,8 @@
+2024-09-25  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp.el (tramp-file-name-handler): Adapt `tramp-verbose' when
+	completing host names.
+
 2024-09-23  Michael Albinus  <michael.albinus@gmx.de>
 
 	* tramp.el (tramp-otp-password-prompt-regexp): Add TACC HPC prompt.
